testsuite/gsksl/errors/sampler-equal.glsl
uniform sampler2D x;
uniform sampler2D y;

void
main  ()
{
  bool b = (x == y);
}
